# cidk

./: CMakeLists.txt  README.md  todo.org
bench/: fib_iter.al  fib_iter.py  fib_rec.al  fib_rec.idk  fib_rec.ops  fib_rec.py  fib_tail.al  fib_tail.py  fix.al  fix.py  pair.al  pair.py
demo/: add.al  const.al  define.al  env.al  fun.al  if.al  list.al  recall.al  stack.al  test.al  test.ops
src/: main.cpp
src/cidk/: #val.hpp#  arg.cpp  arg.hpp  bin_op.cpp  bin_op.hpp  call.cpp  call.hpp  cidk.hpp  cmp.hpp  conf.hpp  const_type.cpp  const_type.hpp  cx.cpp  cx.hpp  def.cpp  def.hpp  defer.hpp  e.cpp  e.hpp  e_user.cpp  e_user.hpp  enum.hpp  env.cpp  env.hpp  env_item.cpp  env_item.hpp  expr.cpp  expr.hpp  ext_id.cpp  ext_id.hpp  fimp.hpp  fix.hpp  fun.cpp  fun.hpp  int.hpp  lib.cpp  lib.hpp  list.cpp  list.hpp  ls.hpp  (+44 more)
src/cidk/libs/: abc.cpp  abc.hpp  math.cpp  math.hpp
src/cidk/ops/: add.cpp  add.hpp  assert.cpp  assert.hpp  bench.cpp  bench.hpp  call.cpp  call.hpp  call_bin.cpp  call_bin.hpp  check.cpp  check.hpp  clock.cpp  clock.hpp  const.cpp  const.hpp  cp.cpp  cp.hpp  dec.cpp  dec.hpp  defconst.cpp  defconst.hpp  defer.cpp  defer.hpp  define.cpp  define.hpp  defun.cpp  defun.hpp  dispatch.cpp  dispatch.hpp  div.cpp  div.hpp  do.cpp  do.hpp  do_env.cpp  do_env.hpp  do_stack.cpp  do_stack.hpp  drop.cpp  drop.hpp  (+60 more)
src/cidk/types/: any.cpp  any.hpp  bool.cpp  bool.hpp  byte.cpp  byte.hpp  char.cpp  char.hpp  e.cpp  e.hpp  env.cpp  env.hpp  expr.cpp  expr.hpp  fix.cpp  fix.hpp  fun.cpp  fun.hpp  funs.cpp  funs.hpp  int.cpp  int.hpp  lib.cpp  lib.hpp  list.cpp  list.hpp  macro.cpp  macro.hpp  meta.cpp  meta.hpp  nil.cpp  nil.hpp  ostream.cpp  ostream.hpp  pair.cpp  pair.hpp  pop.cpp  pop.hpp  reg.cpp  reg.hpp  (+6 more)
test/: abc.al  env.al  fun.al  iter.al  list.al  math.al  num.al  pair.al  run.al  stack.al  type.al
